# pong

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
Pong/: CMakeLists.txt  main.cpp
in/: PongConfig.h.in
libs/vc140-win32-debug/: sfml-audio-d-2.ilk  sfml-audio-d.exp  sfml-graphics-d-2.ilk  sfml-graphics-d.exp  sfml-network-d-2.ilk  sfml-network-d.exp  sfml-system-d-2.ilk  sfml-system-d.exp  sfml-window-d-2.ilk  sfml-window-d.exp
libs/vc140-win32-release/: sfml-audio.exp  sfml-graphics.exp  sfml-network.exp  sfml-system.exp  sfml-window.exp
